<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_map_loader</name>
  <version>1.7.0</version>
  <description>The autoware_map_loader package</description>
  <maintainer email="yamato.ando@tier4.jp">Yamato Ando</maintainer>
  <maintainer email="masahiro.sakamoto@tier4.jp">Masahiro Sakamoto</maintainer>
  <maintainer email="anh.nguyen.2@tier4.jp">NGUYEN Viet Anh</maintainer>
  <maintainer email="taiki.yamada@tier4.jp">Taiki Yamada</maintainer>

  <license>Apache License 2.0</license>
  <author email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</author>
  <author email="koji.minoda@tier4.jp">Koji Minoda</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_component_interface_specs</depend>
  <depend>autoware_geography_utils</depend>
  <depend>autoware_lanelet2_extension</depend>
  <depend>autoware_lanelet2_utils</depend>
  <depend>autoware_map_msgs</depend>
  <depend>fmt</depend>
  <depend>geometry_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>visualization_msgs</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
